[gd_scene load_steps=2 format=3 uid="uid://cq5nf3y4spvkr"]

[ext_resource type="Script" path="res://world.gd" id="1_lnosj"]

[node name="World" type="Node2D"]
script = ExtResource("1_lnosj")

[node name="TimerAutoattack" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0

[node name="Attack" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 133.0
offset_top = 226.0
offset_right = 307.0
offset_bottom = 346.0
text = "Атака 2"

[node name="InfoPlayer" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 272.0
offset_top = 131.0
offset_right = 425.0
offset_bottom = 154.0
text = "Золото: 12. Атака 3"

[node name="Enemy" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 415.0
offset_top = 214.0
offset_right = 507.0
offset_bottom = 263.0
text = "Враг.
Здоровье 5"

[node name="UpgradesBox" type="VBoxContainer" parent="."]
offset_left = 130.0
offset_top = 398.0
offset_right = 393.0
offset_bottom = 510.0

[node name="UpAttack" type="Button" parent="UpgradesBox"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Прокачать атаку +1.
Золото 2."

[node name="UpAttackTime" type="Button" parent="UpgradesBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Прокачать скорость атаки +0.1.
Золото 10"

[node name="WeaponSelect" type="OptionButton" parent="."]
offset_left = 425.0
offset_top = 403.0
offset_right = 515.0
offset_bottom = 434.0
selected = 0
allow_reselect = true
item_count = 4
popup/item_0/text = "Кулаки"
popup/item_1/text = "Меч"
popup/item_1/id = 1
popup/item_2/text = "Лук"
popup/item_2/id = 2
popup/item_3/text = "Копьё"
popup/item_3/id = 3

[node name="WeaponInfo" type="Label" parent="WeaponSelect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -1.0
offset_top = 49.0
offset_right = 143.0
offset_bottom = 124.0
text = "Оружие: Меч ур.1
Атака: 2
Скорость атаки: 4
"

[node name="HistoryList" type="ItemList" parent="."]
unique_name_in_owner = true
offset_left = 839.0
offset_top = 3.0
offset_right = 1151.0
offset_bottom = 648.0
allow_search = false
max_text_lines = 3
text_overrun_behavior = 0
item_count = 2
fixed_column_width = 300
icon_mode = 0
item_0/text = "Добро пожаловать в  Gen Clicker!"
item_1/text = "Начало игры"

[node name="GameIntro" type="Label" parent="."]
offset_left = 32.0
offset_top = 17.0
offset_right = 785.0
offset_bottom = 66.0
text = "Gen Clicker - игра на основе механики бесконечных улучшений Memento Mori.
Каждый элемент может быть пракачен с определённым шансом, но зато до бесконечности."

[node name="AutoattackToggle" type="CheckButton" parent="."]
unique_name_in_owner = true
offset_left = 134.0
offset_top = 186.0
offset_right = 266.0
offset_bottom = 217.0
text = "Автоатака"

[connection signal="timeout" from="TimerAutoattack" to="." method="_on_timer_timeout"]
[connection signal="button_down" from="Attack" to="." method="_on_attack_button_down"]
[connection signal="button_down" from="UpgradesBox/UpAttack" to="." method="_on_up_attack_button_down"]
[connection signal="button_down" from="UpgradesBox/UpAttackTime" to="." method="_on_up_attack_time_button_down"]
[connection signal="item_selected" from="WeaponSelect" to="." method="_on_weapon_select_item_selected"]
[connection signal="toggled" from="AutoattackToggle" to="." method="_on_autoattack_toggle_toggled"]
